WIP use front app template

--- a/apps/client/src/styles/fonts.scss
+++ b/apps/client/src/styles/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Fenix";
-  src: url("./fonts/fenix-latin-400-normal.woff2") format("woff2");
+  src: url("../fonts/fenix-latin-400-normal.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
