--- a/apps/client/src/styles/index.scss
+++ b/apps/client/src/styles/index.scss
@@ -1,12 +1,6 @@
-:root {
-  --black: #1e1e1e;
-  --gold: #d4af37;
-  --white: #ffffff;
-  --font-size-l: 1.5em;
-  --font-size-m: 1em;
-  --seperator-before: 1em;
-  --seperator-after: 1.5em;
-}
+@use "reset";
+@use "variables";
+@use "fonts";
 
 html,
 body {
